[tool.poetry]
name = "net-sniffer"
version = "3.1.1"
description = "A Network Packet Sniffing tool developed in Python 3"
authors = ["EONRaider <livewire_voodoo@protonmail.com>"]
repository = "https://github.com/EONRaider/Packet-Sniffer"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
netprotocols = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
