[tool.poetry]
name = "net-sniffer"
version = "3.1.2"
description = "A Network Packet Sniffing tool developed in Python 3"
authors = ["EONRaider <livewire_voodoo@protonmail.com>"]
repository = "https://github.com/EONRaider/Packet-Sniffer"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
netprotocols = "^0.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
toml = "^0.10.2"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=80
target-version=["py38"]

[tool.bandit]
exclude_dirs = [".idea", "venv", ".venv", ".pytest_cache", "__pycache__"]
skips = ["B101", "B311"]
